Updated tab colors: SQL in light green, Power BI in yellow

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <!-- Tabs Container -->
     <div class="tabs">
-        <a href="#home" class="tab">Home</a>
-        <a href="#sql" class="tab">SQL</a>
-        <a href="#powerbi" class="tab">Power BI</a>
+        <a href="#home" id="home" class="tab">Home</a>
+        <a href="#sql" id="sql" class="tab">SQL</a>
+        <a href="#powerbi" id="powerbi" class="tab">Power BI</a>
     </div>
 
     <!-- Content Sections -->
