--- a/index.html
+++ b/index.html
@@ -3,31 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kuzzonz Portfolio</title>
+    <title>James String Reviews</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Tabs Container -->
-    <div class="tabs">
-        <a href="#home" id="home" class="tab">Home</a>
-        <a href="#sql" id="sql" class="tab">SQL</a>
-        <a href="#powerbi" id="powerbi" class="tab">Power BI</a>
-    </div>
-
-    <!-- Content Sections -->
-    <div id="home" class="content-section">
-        <h1>Home</h1>
-        <p>Welcome to my portfolio website!</p>
-    </div>
-    <div id="sql" class="content-section">
-        <h1>SQL Projects</h1>
-        <p>Details about SQL projects.</p>
-    </div>
-    <div id="powerbi" class="content-section">
-        <h1>Power BI Projects</h1>
-        <p>Details about Power BI projects.</p>
-    </div>
-
-    <script src="script.js"></script>
+    <h1>James String Reviews</h1>
+    <p>The community consensus</p>
 </body>
 </html>
